# chaincash-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/actions/cargo-cache/: action.yaml
.github/workflows/: audit.yaml  ci.yaml  fmt-lint-test.yaml
chaincash_app/src/: lib.rs
chaincash_cli/: Cargo.toml  README.md
chaincash_cli/src/: main.rs  run.rs
chaincash_offchain/: Cargo.toml
chaincash_offchain/src/: contracts.rs  lib.rs  node.rs  transactions.rs
chaincash_offchain/src/transactions/: reserves.rs
chaincash_predicate/: Cargo.toml
chaincash_predicate/src/: collateral.rs  lib.rs
chaincash_server/: Cargo.toml  README.md
chaincash_server/src/: app.rs  error.rs  kv.rs  lib.rs  main.rs
chaincash_store/: Cargo.toml  chaincash.sqlite
chaincash_store/migrations/2023-10-31-063713_create_notes/: down.sql  up.sql
chaincash_store/migrations/2023-10-31-063721_create_reserves/: down.sql
chaincash_store/migrations/2023-10-31-091509_create_ergo_boxes/: down.sql
chaincash_store/src/: database.rs  error.rs  lib.rs
chaincash_store/src/database/: schema.rs
chaincash_store/src/entities/: notes.rs  reserves.rs
config/: default.toml
config/predicates/: example.toml
crates/chaincash_app/: Cargo.toml
crates/chaincash_app/config/: default.toml
crates/chaincash_app/src/: lib.rs
crates/chaincash_cli/: Cargo.toml
crates/chaincash_cli/src/: main.rs
crates/chaincash_entities/: Cargo.toml
crates/chaincash_offchain/: Cargo.toml
crates/chaincash_offchain/src/: boxes.rs  contracts.rs  lib.rs  node.rs  note_history.rs  oracle.rs  test_util.rs  transactions.rs
crates/chaincash_offchain/src/transactions/: notes.rs  reserves.rs
crates/chaincash_predicate/: Cargo.toml
crates/chaincash_predicate/src/: collateral.rs  context.rs  lib.rs  or.rs  predicates.rs  whitelist.rs
crates/chaincash_predicate/src/predicates/: blacklist.rs  collateral.rs  or.rs  whitelist.rs
crates/chaincash_server/: Cargo.toml  README.md
crates/chaincash_server/src/: acceptance.rs  api.rs  app.rs  lib.rs  notes.rs  openapi.rs  reserves.rs
crates/chaincash_services/: Cargo.toml
crates/chaincash_services/src/: compiler.rs  lib.rs  scanner.rs  transaction.rs
crates/chaincash_specs/: Cargo.toml
crates/chaincash_specs/src/: boxes.rs  lib.rs
crates/chaincash_store/: Cargo.toml  diesel.toml
crates/chaincash_store/migrations/2023-10-31-063713_create_notes/: up.sql
crates/chaincash_store/migrations/2023-10-31-063721_create_reserves/: up.sql
crates/chaincash_store/migrations/2023-10-31-091509_create_ergo_boxes/: up.sql
crates/chaincash_store/migrations/2023-12-16-005927_create_ownership_entries/: down.sql  up.sql
crates/chaincash_store/migrations/2023-12-16-011000_create_denominations/: down.sql  up.sql
crates/chaincash_store/migrations/2024-07-29-121150_create_scans/: up.sql
crates/chaincash_store/migrations/2024-08-28-071415_create_pubkey_indices/: down.sql  up.sql
crates/chaincash_store/migrations/2024-09-02-135428_remove_scan_unique_constraint/: down.sql  up.sql
crates/chaincash_store/src/: entities.rs  ergo_boxes.rs  error.rs  lib.rs  notes.rs  reserves.rs  scans.rs  schema.rs  sqlite.rs
crates/chaincash_store/src/entities/: reserves.rs
docs/: MODEL.md
