[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[workspace.dependencies]
serde_json = "1.0.108"
thiserror = "1.0.44"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
ergo_client = { git = "https://github.com/ross-weir/ergo_client.git" }
