[package]
name = "chaincash_offchain"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[dependencies]
once_cell = "1.18.0"
ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = ["compiler"] }
ergo-node-interface = "0.4.0"
# required for Url struct, should instead be re-exported from `ergo-node-interface` in the future
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { workspace = true }
