[package]
name = "chaincash_app"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[dependencies]
chaincash_server = { path = "../chaincash_server" }
config = "0.13.1"
chaincash_store = { workspace = true }
thiserror = { workspace = true }
listenfd = { workspace = true }
serde = { workspace = true }
