[package]
name = "chaincash_app"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[dependencies]
chaincash_server = { path = "../chaincash_server" }
chaincash_offchain = { path = "../chaincash_offchain" }
chaincash_store = { path = "../chaincash_store" }
config = "0.13.1"
thiserror = { workspace = true }
listenfd = "1.0.1"
serde = { workspace = true }
