[package]
name = "chaincash_offchain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
once_cell = "1.18.0"
ergo_lib = { workspace = true }
ergo_client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ergo_avltree_rust = "0.1.0"
sigma-ser = "0.13.0"
tracing = { workspace = true }

[dev-dependencies]
ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = [
    "compiler",
    "arbitrary",
] }
proptest = "1.0"
proptest-derive = "0.3"
