[package]
name = "chaincash_offchain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
once_cell = "1.18.0"
ergo-lib = { workspace = true }
ergo_client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ergo_avltree_rust = "0.1.0"
sigma-ser = "0.13.0"
tracing = { workspace = true }
k256 = "0.13.3"
rand = { version = "0.8.5", features = ["std", "std_rng"] }

[dev-dependencies]
ergo-lib = { workspace = true, features = ["compiler", "arbitrary"] }
proptest = "1.0"
proptest-derive = "0.3"
