[package]
name = "chaincash_server"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chaincash_store = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
